# libgc

./: CMakeLists.txt  README.md
include/: lgc.h  lgc_mem.h
src/: lgc.c  lgc_impl.h  lgc_list.h  lgc_mem.c  lgc_pool.c  lgc_pool.h
